--- a/bookmarks/templates/home.html
+++ b/bookmarks/templates/home.html
@@ -1,2 +1,6 @@
+{% extends "base.html" %}
+{% block content %}
 <h1> Welcome to Bookmarks </h1>
+<a href="http://127.0.0.1:8000/bookmarks/login/">Be Sure to Login</a href>
 <a href="http://127.0.0.1:8000/bookmarks/">View Bookmarks</a href>
+{% endblock %}
